@@ -2,6 +2,7 @@
 	new feature: configure default SNMP community (by jthurman)
 	new feature: "$untagged" and "$masklen_OP_NN" autotags
 	new feature: knight button in IPv4 tree
+	new feature: searching by attribute value or port reservation comment
 	update: show appropriate message, if a record cannot be found
 	update: add Cisco dictionary entry for WS-CBS3030-DEL. closes ticket 225 (by jthurman)
 	update: add OS, router, fibre switch dictionary entries for ticket 238 (by Aaron)
